// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MediaQueryWrapper /> renders <MediaQueryWrapper /> with complex query prop: complex query prop 1`] = `
<div
  className="sd-t-media-query-wrapper sd-t-media-query-wrapper--mobile-block sd-t-media-query-wrapper--tablet-small-block"
>
  Content
</div>
`;

exports[`<MediaQueryWrapper /> renders <MediaQueryWrapper /> with default props: Default props 1`] = `
<div
  className="sd-t-media-query-wrapper sd-t-media-query-wrapper--mobile-block"
>
  Content
</div>
`;

exports[`<MediaQueryWrapper /> renders <MediaQueryWrapper /> with desktop query prop: desktop query prop 1`] = `
<div
  className="sd-t-media-query-wrapper sd-t-media-query-wrapper--desktop-block"
>
  Content
</div>
`;

exports[`<MediaQueryWrapper /> renders <MediaQueryWrapper /> with tablet query prop and flex: tablet query prop and flex 1`] = `
<div
  className="sd-t-media-query-wrapper sd-t-media-query-wrapper--tablet-flex"
>
  Content
</div>
`;
